--- a/intex.html
+++ b/intex.html
@@ -8,7 +8,8 @@
   <body>
 
      <h1>pagina da Laira</h1>
-     <p>Turma:1H</p>
+     <p>Turma:1H numero: 37</p>
+     <p>minha avaliação</p>
 
   </body>
 </html>
