--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
-<html lang="pt-br" dir="ltr">
+<html lang="pt-br " dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Aluna Laira</title>
     <link rel="stylesheet" href="estilo.css">
   </head>
   <body>
-
-     <h1>pagina da Laira</h1>
-     <p>Turma:1H numero: 37</p>
-     <p>minha avaliação</p>
-
-     <div class="caixa1">
-       conteudo
-     </div>
-
-     <div class="caixa2">
-      conteudo caixa 2
-    </div>
-
+    <div class="menuPrincipal">
+      <nav>
+          <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="pagina01.html">Página 01</a></li>
+              <li><a href="pagina02.html">Página 02</a></li>
+          </ul>
+      </nav>
+   </div>
+    <h1>Página da Laira</h1>
+    <p>1H - Número: 37</p>
   </body>
 </html>
