--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
           </ul>
       </nav>
    </div>
-    <h1>Página da Laira</h1>
-    <p>1H - Número: 37</p>
+   <div class="rodape">
+     Nome: Laira 37, Alexandre 1 - 1H
+   </div>
+    <h1></h1>
+
+    <div class="metallica"> 
+      <img id="metallica" src="metallicaLogo.png" alt="">
+    </div>
+    
+    <p></p>
   </body>
 </html>
