--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <nav>
           <ul>
               <li><a href="index.html">Home</a></li>
-              <li><a href="pagina01.html">Página 01</a></li>
+              <li><a href="história.html">História</a></li>
               <li><a href="pagina02.html">Página 02</a></li>
           </ul>
       </nav>
@@ -18,12 +18,17 @@
    <div class="rodape">
      Nome: Laira 37, Alexandre 1 - 1H
    </div>
-    <h1></h1>
-
+   <div class="conteudo">
     <div class="metallica"> 
       <img id="metallica" src="metallicaLogo.png" alt="">
     </div>
-    
-    <p></p>
-  </body>
+
+    <div class="cu">
+    <h1></h1>
+ <p>Metallica é uma banda norte-americana de heavy metal originária de Los Angeles </p>
+ <p>O Metallica se formou em 1981</p>
+ <p>A sua formação atual apresenta o baterista fundador Lars Ulrich, e o também fundador, vocalista e guitarrista rítmico James Hetfield, além do guitarrista solo Kirk Hammett (o qual se juntou à banda em 1983, após a demissão de Dave Mustaine), e o baixista Robert Trujillo (membro desde 2003).</p>
+  
+   </div>
+   </body>
 </html>
