--- a/pagina01.html
+++ b/pagina01.html
@@ -12,10 +12,14 @@
        <nav>
            <ul>
                <li><a href="index.html">Home</a></li>
-               <li><a href="pagina01.html">Página 01</a></li>
+               <li><a href="pagina01.html">História</a></li>
                <li><a href="pagina02.html">Página 02</a></li>
            </ul>
        </nav>
     </div>
+    <div class="texto">
+    <p>O Metallica foi formado em Los Angeles, Califórnia, no fim de 1981 quando o baterista Lars Ulrich colocou um anúncio num jornal de Los Angeles (The Recycler) que dizia "Baterista à procura de outros músicos de metal"</p>
+<p>Os guitarristas James Hetfield e Hugh Tanner de Leather Charm responderam ao anúncio. Embora ele ainda não tivesse formado uma banda, Ulrich perguntou para o fundador da Metal Blade Records Brian Slagel se ele podia gravar uma canção para a próxima compilação da gravadora intitulada Metal Massacre. Slagel aceitou e Ulrich convidou Hetfield para cantar e tocar baixo em 1981.</p>
+</div>
 </body>
 </html>
