--- a/pagina02.html
+++ b/pagina02.html
@@ -12,11 +12,18 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="pagina01.html">Página 01</a></li>
+                <li><a href="pagina01.html">História</a></li>
                 <li><a href="pagina02.html">Página 02</a></li>
             </ul>
         </nav>
      </div>
+    <div class="texto">
+        <p>A sua formação atual apresenta o baterista fundador Lars Ulrich, e o também fundador, vocalista e guitarrista rítmico James Hetfield, além do guitarrista solo Kirk Hammett (o qual se juntou à banda em 1983, após a demissão de Dave Mustaine), e o baixista Robert Trujillo </p>
+    </div>
+
+    <div class="integrantes"> 
+    <img id="integrantes" src="integrantes.jpg" alt="">
+    </div>
     
 </body>
 </html>
