--- a/pagina01.html
+++ b/pagina01.html
@@ -13,7 +13,8 @@
            <ul>
                <li><a href="index.html">Home</a></li>
                <li><a href="pagina01.html">História</a></li>
-               <li><a href="pagina02.html">Página 02</a></li>
+               <li><a href="pagina02.html">Integrantes</a></li>
+               <li><a href="pagina03.html">Discografia</a></li>
            </ul>
        </nav>
     </div>
