--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
           <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="pagina01.html">História</a></li>
-              <li><a href="pagina02.html">Página 02</a></li>
+              <li><a href="pagina02.html">Integrantes</a></li>
+              <li><a href="pagina03.html">Discografia</a></li>
           </ul>
       </nav>
    </div>
    <div class="rodape">
-     Nome: Laira 37, Alexandre 1 , Kauã 12 - 1H
+     Nome: Laira 37, Alexandre 1, Kauã 12 - 1 H
    </div>
    <div class="conteudo">
     <div class="metallica"> 
@@ -26,7 +27,7 @@
     <div class="texto">
     <h1>Banda Metallica</h1>
   <p>Metallica é uma banda norte-americana de heavy metal originária de Los Angeles, Metallica se formou em 1981.</p>
-  <p>A sua formação atual apresenta o baterista fundador Lars Ulrich, e o também fundador, vocalista e guitarrista rítmico James Hetfield, além do guitarrista solo Kirk Hammett (o qual se juntou à banda em 1983, após a demissão de Dave Mustaine), e o baixista Robert Trujillo (membro desde 2003).</p>
+  <p>O seu repertório inclui tempos rápidos, pesados, melódicos, instrumentais e musicalidade agressiva, a qual os consagrou como pioneiros do thrash metal</p>
   
    </div>
    </body>
